Project

General

Profile

Actions

Bug #19932

closed

rgw_file: v3 write timer does not close open handles

Added by Matt Benjamin almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When a v3 write timer expires, it completes the current write as required, but does not clear the FLAG_OPEN or FLAG_STATELESS_OPEN states.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20003: jewel: rgw_file: v3 write timer does not close open handlesResolvedNathan CutlerActions
Copied to rgw - Backport #20004: kraken: rgw_file: v3 write timer does not close open handlesRejectedActions
Actions #1

Updated by Ken Dreyer almost 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Ken Dreyer almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20003: jewel: rgw_file: v3 write timer does not close open handles added
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20004: kraken: rgw_file: v3 write timer does not close open handles added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF