rgw_file: v3: fix write-timer action

For now, unify with v4 write-on-close path, by calling
RGWFileHandle::close() on write-timer expire, since it will
call write_finish() as a side-effect.

Fixes: http://tracker.ceph.com/issues/19932

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit ce6ecb553b85ea158af28c22827b93135a75d159)